Removed some mechanics that are not needed